@@ -1,0 +1,2 @@
+for x in range(5):
+    print "hello", x, x / 2
